--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker
+name: CI/CD Docker + Railway
 
 on:
   push:
@@ -9,54 +9,78 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  build-test-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
-      - name: Checkout code
+      # 1. Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Backend build
+      # 2. Backend setup
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 21
 
+      # 3. Run backend tests
+      - name: Run backend tests
+        working-directory: ./Backend
+        run: mvn test
+
+      # 4. Build backend
       - name: Build backend
         working-directory: ./Backend
         run: mvn clean package -DskipTests
 
-      # Frontend build
+      # 5. Frontend setup
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
+      # 6. Install frontend dependencies
       - name: Install frontend dependencies
-        working-directory: ./Frontend
+        working-directory: ./task-manager-frontend
         run: npm install
 
+      # 7. Build frontend
       - name: Build frontend
-        working-directory: ./Frontend
+        working-directory: ./task-manager-frontend
         run: npm run build
 
-      # Docker login
+      # 8. Docker login
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push backend image
+      # 9. Build & push backend Docker image
       - name: Build and push backend Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/task-manager-backend:latest ./Backend
           docker push ${{ secrets.DOCKER_USERNAME }}/task-manager-backend:latest
 
-      # Build and push frontend image
+      # 10. Build & push frontend Docker image
       - name: Build and push frontend Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/task-manager-frontend:latest ./Frontend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/task-manager-frontend:latest ./task-manager-frontend
           docker push ${{ secrets.DOCKER_USERNAME }}/task-manager-frontend:latest
+
+      # 11. Deploy to Railway (backend)
+      - name: Deploy backend to Railway
+        uses: railwayapp/cli-action@v2
+        with:
+          args: up --detach --service task-manager-backend
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      # 12. Deploy frontend to Railway
+      - name: Deploy frontend to Railway
+        uses: railwayapp/cli-action@v2
+        with:
+          args: up --detach --service task-manager-frontend
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
